<resources>

<!--    Write all the strings here to support more than one language-->
    <string name="app_name">DigiProf</string>
    <string name="changeLang">Change Language</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="register">Register</string>
    <string name="get_help_for_school_wherever_whenever">Get help for school wherever, whenever</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_recover"><u>Forgot Password? Recover</u></string>
    <string name="don_t_have_an_account_register">Don\'t have an account? <u>Register </u></string>
    <string name="already_have_account_login">Already have account? <u>Login</u></string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="welcome">welcome</string>
    <string name="digiprof">DigiProf</string>
    <string name="login">Login</string>
<!--        hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh                        -->
    <string name="logout">Logout</string>
    <string name="his_name">His Name</string>
    <string name="online">online</string>
    <string name="start_typing">Start typing</string>
    <string name="his_message">His Message</string>
    <string name="_02_03_2019_05_59pm">02/03/2019 05:59PM</string>
    <string name="delivered">delivered</string>
    <string name="the_last_message">The last message</string>
    <string name="person_email">Person Email</string>
    <string name="person_name">Person Name</string>

    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="chats">Chats</string>

    <string name="Delete">Delete</string>
    <string name="confirm_delete">Are you sure you want to delete this message?</string>

    <string name="seen">Seen</string>
    <string name="delivered_success">Delivered</string>


    <string name="Cancel">No</string>
    <string name="message_was_deleted">This message was deleted…</string>
    <string name="message_deleted">Message deleted…</string>
    <string name="cannot_delete">You can only delete your own messages</string>
<!--Profile Edits-->
    <string name="edit_profile">Edit Profile Picture</string>
    <string name="edit_cover">Edit Cover Photo</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_password">Change Password</string>

<!--    Profile Update Messages-->
    <string name="update_profile">Updating Profile Picture</string>
    <string name="update_cover">Updating Cover Photo</string>
    <string name="update_name">Updating Name</string>
    <string name="updating_password">Changing Password</string>
    <string name="choose_action">Choose Action</string>
    <string name="enter_current_password">"Enter your current password…"</string>
    <string name="password_length_not_six">Password length must atleast 6 characters…</string>
    <string name="password_update_success">Password Updated…</string>


    <string name="update">Update </string>
    <string name="enter">Enter</string>
    <string name="updated">Updated…</string>
    <string name="please_enter">Please enter</string>
    <string name="cancell">Cancel</string>
    <string name="cammmera">Camera</string>
    <string name="gallllery">Gallery</string>
    <string name="pick_image_from">Pick Image From</string>
    <string name="enable_cammmera_storage_permission">Please enable camera &amp; storage permission</string>
    <string name="enable_storrrage_permission">Please enable storage permission</string>
    <string name="image_update_success">Image Updated…</string>
    <string name="image_update_failed">Error Updating Image…</string>
    <string name="some_error">Some error occurred</string>

    <string name="typing_status">typing…</string>
    <string name="not_send_empty_message">Cannot send empty message…</string>
    <string name="new_message">New Message</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="sending_email">Sending Email…</string>
    <string name="email_sent">Email sent</string>
    <string name="failed">Failed…</string>
    <string name="loggging_in">Logging in…</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="choose_languages">Choose Language…</string>
    <string name="create_account">Create Account</string>
    <string name="registering_user">Registering User…</string>
    <string name="registered">Registered…</string>


</resources>
