<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.example.firebaseapp.LoginActivity"
    android:background="@color/colorBlueDull">


    <!--TextView: Label Login-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="45sp" />

    <!--EditText: Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@color/colorYellow"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--EditText: Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTIL"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@color/colorYellow"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--Button: Register User-->
    <Button
        android:id="@+id/loginBtn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTIL"
        android:background="@color/colorBlue"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_login_white"
        android:drawablePadding="5dp"
        android:text="@string/login"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorYellow"/>

    <!--TextView: Show dialog to recover password-->

    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_marginTop="47dp"
        android:text="@string/forgot_password_recover"
        android:textAlignment="center"
        android:textColor="@color/colorYellow" />

    <TextView
        android:id="@+id/nothave_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorYellow"
        android:layout_marginBottom="55dp"/>

    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:text="@string/changeLang"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>